Firefox OS Contact Viewer Using Vanilla JavaScript

--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
 
     <article class="view-content">
       <ul id="contacts-list" class="list reset-list">
-        <li class="listitem">Contact 1</li>
-        <li class="listitem">Contact 2</li>
-        <li class="listitem">Contact 3</li>
-        <li class="listitem">Contact 4</li>
-        <li class="listitem">Contact 5</li>
+        <!--
+          --- This is how the rendered template look like ---
+          <li class="listitem" data-idx="0">Fawad Hassan</li>
+        -->
       </ul>
     </article>
   </section><!--end view-contacts-->
