Contacts rendered in chunks when required
Contacts are now rendered in chunks when scrolled
to the relevant position instead of displaying
them in one go

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       <h1>Contacts</h1>
     </header>
 
-    <section>
+    <section class="view-content">
       <ul id="contacts-list" class="list reset-list">
         <!--
-          --- This is how the rendered template look like ---
+          === This is how the rendered template look like ===
           <li class="listitem" data-idx="0">Fawad Hassan</li>
         -->
       </ul>
